# no-hallucination-rag-shell

./: .dockerignore  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUTONOMOUS_SDLC_BREAKTHROUGH_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENERATION_1_SUMMARY.md  PRODUCTION-README.md  PROJECT_CHARTER.md  QUANTUM_ENHANCED_RAG_RESEARCH_FRAMEWORK.md  QUANTUM_RAG_RESEARCH_PAPER.md  QUANTUM_RAG_RESEARCH_PUBLICATION.md  QUANTUM_RESEARCH_PUBLICATION.md  README.md  RESEARCH_REPRODUCIBILITY_PACKAGE.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_FINAL.md  TERRAGON_QUANTUM_RAG_PRODUCTION_DEPLOYMENT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  demo.py  demo_gen1.py  deploy_production.py  docker-compose.yml  enhance_gen2.py  enhance_gen3.py  execute_breakthrough_research_validation.py  execute_comprehensive_research_validation.py  next_gen_quantum_demo.py  prometheus.yml  pyproject.toml  pytest.ini  quality_gates.py  (+21 more)
configs/: development.yaml  production.yaml
data/: optimization_state.json
data/cache/: factuality.pkl  retrieval.pkl
deploy/: kubernetes.yaml  production-guide.md
deployment/config/: production.env
deployment/docs/: DEPLOYMENT_GUIDE.md  OPERATIONS_RUNBOOK.md
deployment/kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml
deployment/monitoring/: grafana-dashboard.json  prometheus.yml
deployment/scripts/: deploy.sh  rollback.sh
deployment/templates/: github-workflow-template.yml
docker/: Dockerfile  docker-compose.yml
docs/: ROADMAP.md
docs/adr/: 0001-quantum-enhanced-rag-architecture.md  template.md
no_hallucination_rag/: __init__.py
no_hallucination_rag/core/: __init__.py  advanced_validation.py  citation_verifier.py  enhanced_error_handler.py  error_handling.py  factual_rag.py  grounded_generator.py  hallucination_detector.py  source_ranker.py  text_generator.py  validation.py
no_hallucination_rag/governance/: __init__.py  compliance_checker.py
no_hallucination_rag/knowledge/: __init__.py  document_processor.py  knowledge_base.py  vector_store.py
no_hallucination_rag/monitoring/: advanced_monitoring.py  audit_logger.py  health_monitor.py  metrics.py
research_validation_results/: breakthrough_validation_20250826_205016.json
scripts/: build-and-deploy.sh  deploy.sh
tests/: __init__.py  conftest.py  test_core_components.py  test_factual_rag.py  test_performance.py  test_quantum_planner.py  test_security.py
(+42 files in other folders)
