[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no-hallucination-rag"
version = "1.0.0"
description = "Retrieval-First Shell with Zero-Hallucination Guarantees"
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["rag", "factuality", "ai-safety", "governance", "shell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "nltk>=3.8",
    "scikit-learn>=1.1.0",
    "torch>=2.0.0",
    "safetensors>=0.3.0",
    "networkx>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "prometheus-client>=0.17.0",
]

[project.scripts]
no-hallucination-shell = "no_hallucination_rag.shell.cli:main"
nh-rag = "no_hallucination_rag.shell.cli:main"

[project.urls]
Homepage = "https://github.com/danieleschmidt/no-hallucination-rag-shell"
Repository = "https://github.com/danieleschmidt/no-hallucination-rag-shell"
Issues = "https://github.com/danieleschmidt/no-hallucination-rag-shell/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["no_hallucination_rag*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=no_hallucination_rag --cov-report=term-missing"
asyncio_mode = "auto"